--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,12 +7,6 @@ spring:
     url: jdbc:mariadb://localhost:3306/shop?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=Asia/Seoul&useOldAliasMetadataBehavior=true&zeroDateTimeBehavior=convertToNull
     username: ran
     password: 9151
-    hikari:
-      maximum-pool-size: 20
-      minimum-idle: 5
-      idle-timeout: 30000
-      connection-timeout: 20000
-      max-lifetime: 1800000
   thymeleaf:
     enabled: true
     cache: false
@@ -22,13 +16,13 @@ spring:
       max-request-size: 1MB
   jpa:
     hibernate:
-      ddl-auto: create
-    properties:
-      hibernate:
-        show_sql: true
-        format_sql: true
-        use_sql_comments: true
-        dialect: org.hibernate.dialect.MariaDBDialect
+      ddl-auto: update
+      properties:
+        hibernate:
+          show_sql: true
+          format_sql: true
+          use_sql_comments: true
+          dialect: org.hibernate.dialect.MariaDBDialect
 
   devtools:
     livereload:
@@ -45,7 +39,7 @@ logging:
             sql: trace
 
 upload:
-  dir: /Users/hyeranpakr/Desktop/happy/9.14/shop/dir
+  dir: /Users/hyeranpakr/Desktop/happy/9.14/shop/src/main/resources/static/upload
 
-itemImgLocation: /Users/hyeranpakr/Desktop/happy/9.14/shop/files/
-uploadPath: /Users/hyeranpakr/Desktop/happy/9.14/shop/upload
+itemImgLocation: /Users/hyeranpakr/Desktop/happy/9.14/shop/src/main/resources/static/images
+uploadPath: /Users/hyeranpakr/Desktop/happy/9.14/shop/src/main/resources/static/uploadPath
